# InvestmentProblemsInPython

./: README.md  pyproject.toml  setup.cfg  setup.py
problems/: __init__.py
problems/ai4trading/: __init__.py  module1.py
problems/cfa_foundation/: __init__.py  chapter8.py
problems/hull_derivative/: __init__.py  chapter6.py
problems/soa_exam_fm/: __init__.py  time_value_money.py
problems/soa_exam_p/: __init__.py  general_probability.py  prob_1_to_30.py
tests/ai4trading/: module1_test.py
tests/cfa_foundation/: chapter8_test.py
tests/hull_derivative/: chapter6_test.py
tests/soa_exam_fm/: time_value_money_test.py
tests/soa_exam_p/: __init__.py  general_probability_test.py  prob_1_to_30_test.py
