[metadata]
name = problems
version = 1.0.0
author = "Maxime Blouin"
author_email = maxime.blouin@live.ca
description = "Investment Problems In Python"
license = MIT
url = http://www.maximeblouin.com

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[flake8]
max-doc-length = 79
max-line-length = 79
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__

[options]
packages = find:
install_requires =
    requests
    numpy>=1.15
    pandas>=1.0.0
    scipy
python_version == "3.10.11"

[options.packages.find]
include=problems

[pycodestyle]
count = True
statistics = True

[pydocstyle]
convention = pep257
match = .*\.py

[coverage:run]
relative_files = True
source = problems
omit = '*\__init__.py' '*\__main__.py'

[coverage:report]
skip_empty = true

[coverage:html]

[testenv]
deps =
    pytest
    coverage
commands =
    coverage run -m pytest
    coverage xml

[tool:pytest]
python_files = *_test.py